@@ -10,7 +10,11 @@ from MDAnalysis.analysis.rms import RMSD, RMSF
 from MDAnalysis.analysis.dihedrals import Dihedral, Ramachandran, Janin
 from MDAnalysis.analysis.bat import BAT
 from MDAnalysis.analysis.gnm import GNMAnalysis
+from MDAnalysis.analysis.hydrogenbonds.hbond_analysis import (
+    HydrogenBondAnalysis,
+)
 from MDAnalysis.lib.util import is_installed
+
 
 def params_for_cls(cls, exclude: list[str] = None):
     """
@@ -121,4 +125,10 @@ def client_GNMAnalysis(request):
 
 @pytest.fixture(scope='module', params=params_for_cls(BAT))
 def client_BAT(request):
+    return request.param
+
+# MDAnalysis.analysis.hydrogenbonds
+  
+@pytest.fixture(scope='module', params=params_for_cls(HydrogenBondAnalysis))
+def client_HydrogenBondAnalysis(request):
     return request.param
